[package]
name = "webdir"
version = "0.1.3"
edition = "2021"

[dependencies]
# Errors
anyhow = "1.0.75"

# HTTP server
axum = "0.6.20"

# CLI
clap = { version = "4.4.6", features = ["derive"] }

# Async
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }

# logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8.0"
hyper = { version = "0.14.27", features = ["full"] }
tower = "0.4.13"
